--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 The author of CLEX is Vlado Potisk <vlado_potisk@clex.sk>
+Additional changes by Zoran Loncarevic <zlonc233@gmail.com>.
 
 Many thanks to all the people who have taken the time to submit
 suggestions for enhancements or problem reports.
